# Maybe-kb

./: .gitignore  .mcp.json  CHANGELOG.md  README.md  USER_GUIDE.md  config.toml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex/: config.toml
docs/: claude-plugin.md
docs/superpowers/plans/: 2026-05-10-kb-dashboard.md  (+13 more)
eval/: README.md  generate_dataset.py
scripts/: _serve.py  start.ps1  start.sh
skills/use-kb/: SKILL.md
src/kb/: __init__.py  attachments.py  cli.py  config.py  embedding.py  indexer.py  mcp_server.py  models.py  routes.py  search.py  server.py  services.py  storage.py
src/kb/api/: v1.py  (+3 more)
tests/: test_api_v1.py  test_attachments.py  test_chat_history.py  test_claude_plugin.py  test_cli.py  test_cli_import.py  test_config.py  test_config_writer.py  test_dashboard.py  test_embedding.py  test_eval.py  test_eval_cli.py  test_health.py  test_import_file.py  test_indexer.py  test_ingest.py  test_integration.py  test_llm.py  test_manage_control_center.py  test_markdown_assets.py  test_markitdown_converter.py  test_mcp.py  test_mcp_light_startup.py  test_mcp_save.py  test_models.py  test_open_targets.py  test_parsers.py  test_phase4_e2e.py  test_product_copy.py  test_queries.py  test_rag.py  test_recursive_chunk.py  test_search.py  test_server.py  test_services.py  test_storage.py  test_types_config.py  test_vector.py  test_watcher.py  test_web_health.py  (+1 more)
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/scripts/: kill-port.js
web/src/: App.vue  api.ts  main.ts  markdown.ts  topBar.ts
(+64 files in other folders)
